--- a/miniprogram/pages/repository/repository.wxml
+++ b/miniprogram/pages/repository/repository.wxml
@@ -1,9 +1,10 @@
 <!-- miniprogram/pages/repository/repository.wxml -->
-<base dialog="{{dialog}}">
+
+<base dialog="{{dialog}}" bind:dialog-close="copyFile">
   <block wx:if="{{repo}}">
     <view class="repo-info">
       <view class="repo-name">{{repo.name}}</view>
-      <view class="repo-desc desc">{{repo.description}}</view>
+      <view class="repo-desc desc">{{repo.description || ''}}</view>
       <view class="repo-user" bind:tap="goUser">
         <image src="{{repo.owner.avatar_url}}" class="avatar" />
         {{repo.owner.login}}
@@ -15,11 +16,11 @@
         <image src="/images/icons/license.png" class="icon" />
         {{repo.license.name}}
       </view>
-      <view class="property star">
-        <image src="/images/icons/follow.png" class="icon" />
+      <view class="property star" bind:tap="starred">
+        <image src="/images/icons/{{!stared ?'follow_line.png' : 'follow.png'}}" class="icon" />
         {{repo.stargazers_count}}
       </view>
-      <view class="property star">
+      <view class="property star" bind:tap="fork">
         <image src="/images/icons/fork.png" class="icon" />
         {{repo.forks}}
       </view>
@@ -32,20 +33,27 @@
         {{repo.open_issues}}
       </view>
     </view>
+    <view class="markdown-content {{fold ? 'fold' : ''}}">
+        <include src="/components/comi/comi.wxml" />
+      <!-- <import src="/components/comi/comi.wxml"/>
+      <template is="comi" data="{{wxParseData:article.nodes}}"/> -->
+      <view class="loading" wx:if="{{loadingMd}}">加载中...</view>
+    </view>
+    <view class="loading" style="background: #ffffff;margin-bottom: 40rpx;border-top: 5rpx solid #0366d6;" wx:if="{{markdown && fold}}" bindtap="foldIt">展开</view>
     <view class="github-properties">
-      <view class="property" bindtap="navigatePage" data-type="commits">
+      <view class="property commits" bindtap="navigatePage" data-type="commits">
         <image class="pro-icon icon" src="/images/icons/commit.png" />
         commits
       </view>
-      <view class="property" bindtap="navigatePage" data-type="branches">
+      <view class="property branches" bindtap="navigatePage" data-type="branches">
         <image class="pro-icon icon" src="/images/icons/branch.png" />
         branches
       </view>
-      <view class="property" bindtap="navigatePage" data-type="releases">
+      <view class="property releases" bindtap="navigatePage" data-type="releases">
         <image class="pro-icon icon" src="/images/icons/release.png" />
         releases
       </view>
-      <view class="property" bindtap="navigatePage" data-type="contributors">
+      <view class="property contributors" bindtap="navigatePage" data-type="contributors">
         <image class="pro-icon icon" src="/images/icons/contributor.png" />
         contributors
       </view>
@@ -59,14 +67,8 @@
           <image src="/images/icons/{{item.type === 'blob' ? 'file' : 'fold'}}.png" class="icon" /> 
           <view class="file-name">{{item.path}}</view>
         </view>
-        <view class="file-size" wx:if="{{item.type === 'blob'}}">{{item.size}}</view>
+        <view class="file-size" wx:if="{{item.type === 'blob'}}">{{item.fileSize}}</view>
       </view>
     </view>
   </block>
-  <view class="markdown-content {{fold ? 'fold' : ''}}">
-    <wemark wx:if="{{markdown}}" baseurl="{{baseUrl}}" md="{{markdown}}" link highlight type="wemark"></wemark>
-    <view class="loading" wx:if="{{loadingMd}}">加载中...</view>
-  </view>
-  <view class="loading" style="background: #ffffff;margin-bottom: 40rpx;border-top: 5rpx solid #0366d6;" wx:if="{{markdown && fold}}" bindtap="foldIt">展开</view>
-
 </base>
