--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -4,7 +4,7 @@
     <image class="user-avatar" src="{{user.avatar_url}}" />
     <view class="user-name">
       <view class="login">{{user.login}}</view>
-      <view class="name" wx:if="{{user.name}}">{{user.name}}</view>
+      <view class="name" wx:if="{{user.name}}">{{user.name || ''}}</view>
     </view>
   </view>
   <view class="bio desc" wx:if="{{user.bio}}">{{user.bio}}</view>
@@ -26,12 +26,23 @@
       {{user.public_gists}}
     </view>
   </view>
+  <view class="orgs" wx:if="{{organizations.length}}">
+    <view class="org">ORGANIZATIONS</view>
+    <view class="org-list">
+      <view class="org-repo" data-type="organizations" data-index="{{index}}" wx:for="{{organizations}}" wx:key="index">
+        <image src="{{item.avatar_url}}" class="org-avatar" />
+        <view class="org-name">{{item.login}}</view>
+      </view>
+
+    </view>
+  </view>
   <view class="repos">
-    <view class="item" bind:tap="goRepo" data-index="{{index}}" wx:for="{{repos}}" wx:key="index">
+    <view class="org">REPOSITORIES</view>
+    <view class="item" bind:tap="goRepo" data-type="repos" data-index="{{index}}" wx:for="{{repos}}" wx:key="index">
       <view class="name">
         <view class="title">{{item.full_name}}</view>
       </view>
-      <view class="desc">{{item.description}}</view>
+      <view class="desc">{{item.description || ''}}</view>
       <view class="footer">
         <view class="property star" wx:if="{{item.language}}">
           {{item.language}}
