--- a/miniprogram/pages/user/user.wxss
+++ b/miniprogram/pages/user/user.wxss
@@ -28,6 +28,9 @@
   background: #fff;
   
 }
+.bio{
+  padding: 20rpx;
+}
 .git-item{
   display: flex;
   align-items: center;
@@ -39,4 +42,65 @@
 }
 .repos{
   margin-top: 20rpx;
+}
+.orgs{
+  /* border-bottom: 10rpx solid #0366d6; */
+}
+.org{
+  padding: 20rpx;
+  background: #fff;
+  margin-top: 20rpx;
+  text-align:center;
+  font-weight: bold;
+  border-bottom: 1px solid #ebebeb;
+}
+.org-list{
+  display: flex;
+  align-items: center;
+  padding: 20rpx 0 0;
+  background: #fff;
+  overflow: scroll;
+}
+.org-avatar{
+  width: 100rpx;
+  height: 100rpx;
+}
+.org-name{
+  color: #0366d6;
+  font-weight: bold;
+  display: inline-block;
+  text-align: center;
+  margin: 20rpx;
+  white-space: nowrap;
+  /* width: 80%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis; */
+  
+}
+.org-repo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-bottom: 10rpx solid #f55205;
+}
+.org-repo:nth-child(6n + 1){
+  border-bottom: 10rpx solid #49f505;
+}
+.org-repo:nth-child(6n + 2){
+  border-bottom: 10rpx solid #054df5;
+}
+.org-repo:nth-child(6n + 3){
+  border-bottom: 10rpx solid #e8ec03;
+}
+.org-repo:nth-child(6n + 4){
+  border-bottom: 10rpx solid #059df5;
+}
+.org-repo:nth-child(6n + 5){
+  border-bottom: 10rpx solid #f505e1;
+}
+.org-repo:nth-child(6n){
+  border-bottom: 10rpx solid #f50525;
 }
