--- a/miniprogram/pages/login/login.wxss
+++ b/miniprogram/pages/login/login.wxss
@@ -2,10 +2,7 @@
 .login-logo{
   width: 300rpx;
   height: 300rpx;
-  margin: 50rpx auto;
-}
-.form{
-  padding: 40rpx;
+  margin: 50rpx auto 20rpx;
 }
 .item{
   padding: 20rpx 30rpx;
@@ -18,4 +15,28 @@
 }
 .disabled,.hover{
   opacity: 0.6;
+}
+
+
+.scope-group{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20rpx;
+  height: 200rpx;
+  overflow: scroll;
+  background: #fff;
+}
+.scope-name{
+  font-size: 28rpx;
+  margin-bottom: 20rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  background: #ebebeb;
+  padding: 10rpx 20rpx;
+}
+.label{
+  font-size: 28rpx;
+  margin-bottom: 20rpx;
+  width: 50%;
 }
