--- a/miniprogram/components/comi/wxParse.wxml
+++ b/miniprogram/components/comi/wxParse.wxml
@@ -27,14 +27,14 @@
   <view class="pre language-jsx">
       <view class="code">
           <block wx:for="{{item.tks}}" wx:for-item="tk" wx:key="index">
-              <block wx:if="{{tk.deep}}"><text class="{{'token ' + tk.type}}"><block wx:for="{{tk.content}}" wx:for-item="stk"><block wx:if="{{stk.deep}}"><text class="{{'token ' + sstk.type}}" wx:for="{{stk.content}}" wx:for-item="sstk">{{sstk.content || sstk}}</text>
+              <block wx:if="{{tk.deep}}"><text selectable="{{true}}" class="{{'token ' + tk.type}}"><block wx:for="{{tk.content}}" wx:for-item="stk"><block wx:if="{{stk.deep}}"><text selectable="{{true}}" class="{{'token ' + sstk.type}}" wx:for="{{stk.content}}" wx:for-item="sstk">{{sstk.content || sstk}}</text>
               </block>
-              <block wx:else><text class="{{'token ' + stk.type}}">{{stk.content || stk}}</text>
+              <block wx:else><text selectable="{{true}}" class="{{'token ' + stk.type}}">{{stk.content || stk}}</text>
               </block>
           </block>
           </text>
   </block>
-  <block wx:else><text class="{{'token ' + tk.type}}">{{tk.content || tk}}</text>
+  <block wx:else><text selectable="{{true}}" class="{{'token ' + tk.type}}">{{tk.content || tk}}</text>
   </block>
   </block>
   </view>
@@ -43,7 +43,7 @@
 
 
 <template name="WxEmojiView">
-  <text class="WxEmojiView wxParse-inline" style="{{item.styleStr}}">
+  <text selectable="{{true}}" class="WxEmojiView wxParse-inline" style="{{item.styleStr}}">
     <block wx:for="{{item.textArray}}" wx:key="">
       <block class="{{item.text == '\\n' ? 'wxParse-hide':''}}" wx:if="{{item.node == 'text'}}">{{item.text}}</block>
       <block wx:elif="{{item.node == 'element'}}">
@@ -54,7 +54,7 @@
 </template>
 
 <template name="WxParseBr">
-  <text>\n</text>
+  <text selectable="{{true}}">\n</text>
 </template>
 <!--入口模版-->
 
