--- a/miniprogram/pages/filecontent/filecontent.wxss
+++ b/miniprogram/pages/filecontent/filecontent.wxss
@@ -1,4 +1,5 @@
 /* miniprogram/pages/filecontent/filecontent.wxss */
+@import "/components/comi/comi.wxss";
 .file-info{
   display: flex;
   justify-content: space-between;
